REGRESSION (r208522): LayoutTest fast/loader/reload-zero-byte-plugin.html is a flaky failure https://bugs.webkit.org/show_bug.cgi?id=164570

Reviewed by Simon Fraser.

Tools:

Properly reset TestController::m_shouldDownloadUndisplayableMIMETypes between tests to
avoid flakiness.

* WebKitTestRunner/TestController.cpp:
(WTR::TestController::resetStateToConsistentValues):

LayoutTests:

Unskip test which should no longer be flaky.

* platform/mac/TestExpectations:

Canonical link: https://commits.webkit.org/182292@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208569 268f45cc-cd09-0410-ab3c-d52691b4dbfc